endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased
[[release-notes-1.16.0]]
==== 1.16.0 - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes


[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.15.0]]
==== 1.15.0 - 2020/03/27

[float]
===== Breaking changes

* Ordering of configuration sources has slightly changed, please review <<configuration>>:
** `elasticapm.properties` file now has higher priority over java system properties and environment variables, +
This change allows to change dynamic options values at runtime by editing file, previously values set in java properties
or environment variables could not be overriden, even if they were dynamic.
* Renamed some configuration options related to the experimental profiler-inferred spans feature ({pull}1084[#1084]):
** `profiling_spans_enabled` -> `profiling_inferred_spans_enabled`
** `profiling_sampling_interval` -> `profiling_inferred_spans_sampling_interval`
** `profiling_spans_min_duration` -> `profiling_inferred_spans_min_duration`
** `profiling_included_classes` -> `profiling_inferred_spans_included_classes`
** `profiling_excluded_classes` -> `profiling_inferred_spans_excluded_classes`
** Removed `profiling_interval` and `profiling_duration` (both are fixed to 5s now)

[float]
===== Features

* Gracefully abort agent init when running on a known Java 8 buggy JVM {pull}1075[#1075].
* Add support for <<supported-databases, Redis Redisson client>>
* Makes <<config-instrument>>, <<config-trace-methods>>, and <<config-disable-instrumentations>> dynamic.
Note that changing these values at runtime can slow down the application temporarily.
* Do not instrument Servlet API before 3.0 {pull}1077[#1077]
* Add support for API keys for apm backend authentication {pull}1083[#1083]