@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -171,8 +171,9 @@ public class ApmAsyncListener implements AsyncListener, Recyclable {
                 throwableToSend = throwable;
             }
             servletTransactionHelper.onAfter(transaction, throwableToSend,
-                response.isCommitted(), response.getStatus(), request.getMethod(), parameterMap,
-                request.getServletPath(), request.getPathInfo(), contentTypeHeader, false);
+                response.isCommitted(), response.getStatus(), true, request.getMethod(), parameterMap,
+                request.getServletPath(), request.getPathInfo(), contentTypeHeader, false
+            );
         } finally {
             asyncContextAdviceHelperImpl.recycle(this);
         }
