@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -24,14 +24,21 @@
  */
 package co.elastic.apm.agent.spring.webmvc.exception;
 
+import co.elastic.apm.agent.configuration.CoreConfiguration;
+import co.elastic.apm.agent.matcher.WildcardMatcher;
 import co.elastic.apm.agent.spring.webmvc.exception.testapp.exception_handler.ExceptionHandlerRuntimeException;
 import co.elastic.apm.agent.spring.webmvc.exception.testapp.exception_handler.ExceptionHandlerController;
+import co.elastic.apm.agent.spring.webmvc.exception.testapp.exception_handler.ExceptionHandlerRuntimeException200;
 import org.junit.Test;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.ResultActions;
 
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
 @ContextConfiguration(classes = {
@@ -44,6 +51,27 @@ public class ExceptionHandlerInstrumentationWithExceptionHandlerTest extends Abs
         MvcResult result = resultActions.andReturn();
         MockHttpServletResponse response = result.getResponse();
 
-        assertExceptionCapture(ExceptionHandlerRuntimeException.class, response, 409, "exception-handler runtime exception occured", "runtime exception occured");
+        assertExceptionCapture(ExceptionHandlerRuntimeException.class, response, 409, "exception-handler runtime exception occurred", "runtime exception occurred");
+    }
+
+    @Test
+    public void testExceptionCapture_IgnoreException() throws Exception {
+        when(config.getConfig(CoreConfiguration.class).getIgnoreExceptions()).thenReturn(
+            List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.spring.webmvc.exception.testapp.exception_handler.ExceptionHandlerRuntimeException"))
+        );
+
+        this.mockMvc.perform(get("/exception-handler/throw-exception"));
+
+        assertThat(reporter.getTransactions()).hasSize(1);
+        assertThat(reporter.getErrors()).isEmpty();
+    }
+
+    @Test
+    public void testExceptionCapture_StatusCode200() throws Exception {
+        ResultActions resultActions = this.mockMvc.perform(get("/exception-handler/throw-exception-sc200"));
+        MvcResult result = resultActions.andReturn();
+        MockHttpServletResponse response = result.getResponse();
+
+        assertExceptionCapture(ExceptionHandlerRuntimeException200.class, response, 200, "exception-handler runtime exception occurred", "runtime exception occurred");
     }
 }
