@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -47,8 +47,8 @@ public class ExceptionHandlerInstrumentationWithExceptionResolverTest extends Ab
         MvcResult result = resultActions.andReturn();
         MockHttpServletResponse response = result.getResponse();
 
-        assertExceptionCapture(ExceptionResolverRuntimeException.class, response, 200, "", "runtime exception occured");
+        assertExceptionCapture(ExceptionResolverRuntimeException.class, response, 200, "", "runtime exception occurred");
         assertEquals("error-page", response.getForwardedUrl());
-        assertEquals("runtime exception occured", result.getModelAndView().getModel().get("message"));
+        assertEquals("runtime exception occurred", result.getModelAndView().getModel().get("message"));
     }
 }
