@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -35,7 +35,12 @@ public class ControllerAdviceController {
 
     @GetMapping("/throw-exception")
     public ResponseEntity throwException() {
-        throw new ControllerAdviceRuntimeException("runtime exception occured");
+        throw new ControllerAdviceRuntimeException("runtime exception occurred");
+    }
+
+    @GetMapping("/throw-exception-sc200")
+    public ResponseEntity throwExceptionStatusCode200() {
+        throw new ControllerAdviceRuntimeException200("runtime exception occurred");
     }
 }
 
