@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -38,5 +38,8 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
         return new ResponseEntity<>("controller-advice " + ex.getMessage(), HttpStatus.CONFLICT);
     }
 
-
+    @ExceptionHandler(ControllerAdviceRuntimeException200.class)
+    public ResponseEntity<?> globalExceptionHandlerStatusCode200(ControllerAdviceRuntimeException200 ex) {
+        return new ResponseEntity<>("controller-advice " + ex.getMessage(), HttpStatus.OK);
+    }
 }
