@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -37,12 +37,23 @@ public class ExceptionHandlerController {
 
     @GetMapping("/throw-exception")
     public ResponseEntity throwException() {
-        throw new ExceptionHandlerRuntimeException("runtime exception occured");
+        throw new ExceptionHandlerRuntimeException("runtime exception occurred");
+    }
+
+    @GetMapping("/throw-exception-sc200")
+    public ResponseEntity throwExceptionStatusCode200() {
+        throw new ExceptionHandlerRuntimeException200("runtime exception occurred");
     }
 
     @ExceptionHandler({ExceptionHandlerRuntimeException.class})
     public ResponseEntity handleException(Exception e) {
         // handle exception
         return new ResponseEntity("exception-handler " + e.getMessage(), HttpStatus.CONFLICT);
+    }
+
+    @ExceptionHandler({ExceptionHandlerRuntimeException200.class})
+    public ResponseEntity handleExceptionStatusCode200(Exception e) {
+        // handle exception
+        return new ResponseEntity("exception-handler " + e.getMessage(), HttpStatus.OK);
     }
 }
