@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -38,7 +38,7 @@ public class ResponseStatusExceptionController {
     @GetMapping("/throw-exception")
     public ResponseEntity throwException() {
         try {
-            throw new ResponseStatusRuntimeException("runtime exception occured");
+            throw new ResponseStatusRuntimeException("runtime exception occurred");
         } catch (RuntimeException e) {
             throw new ResponseStatusException(HttpStatus.CONFLICT, "responseStatusException", e);
         }
