@@ -30,7 +30,8 @@ endif::[]
 
 [float]
 ===== Bug fixes
-
+* When Servlet-related Exceptions are handled through exception handlers that return a 200 status code, agent
+shouldn't override with 500 - {pull}1103[#1103]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
